2007-12-20  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildMakefileRunInstallPythonFix):
	Check manual page location and fix it if needed.
	(CygbuildInstallPackageInfo): chnage mkdir(1) to install(1).
	(CygbuildCmdInstallCheckManualPages): Improve missing manual
	page check.
	(CygbuildMakefileRunInstall): Always run
	`CygbuildMakefilePrefixCheck'
	(CygbuildCommandMain): Use quotes.
	(CygbuildHelpLong): Call `CygbuildBootVariablesGlobalShareMain'
	and use $CYGBUILD_STATIC_PERL_MODULE

2007-12-19  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdInstallCheckDirStructure):
	Ignore /etc/X11/app-defaults
	(CygbuildCmdInstallCheckSetupHintDependExists): Restore
	for..in and remove while..do.

2007-12-18  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	(CygbuildCmdPkgDevelStandardDev): Remove
	process substitution.
	(CygbuildCmdInstallCheckDirEmpty): Remove process substitution.
	(CygbuildCmdInstallMain): Send path to custom install script.
	(CygbuildLibInstallEnvironment): Add quotes.
	(CygbuildDefineEnvClear): Unset INCLUDE_PATH
	(CygbuildShellEnvironenment): Remove INCLUDE_PATH
	(CygbuildCmdStripMain): Strip also *.so.
	(CygbuildObjDumpLibraryDepList): New.
	(CygbuildCygcheckMain: New implementation.
	(CygbuildCygcheckLibraryDepGrepTraditonal): New.
	(CygbuildCmdInstallMain): Send absolute path to external install
	script.
	(CygbuildBootVariablesId): Add CYGBUILD_PROG_FULLPATH
	(CygbuildBootVariablesGlobalMain): Add *.dll to
	CYGBUILD_MATCH_FILE_EXE
	(CygbuildInstallFixPermissions): New implementation.

2007-12-15  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdInstallMain): Feed messages from
	install-after.sh through `CygbuildMsgFilter'.
	(CygbuildMsgFilter): Treat >> and --- messages. Ner perl $ENV
	implemantation.
	(CygbuildBootVariablesGlobalColors): Add more color variations.
	(CygbuildCmdInstallCheckBinFiles): Fix 'Binary name clash' message.

2007-12-14  Jari Aalto  <jari.aalto@cante.net>
